# teknik-sis

./: .env  .gitignore  iis-web.config
frontend/: frontend-45cca9ecafc2f562.js  frontend-45cca9ecafc2f562_bg.wasm  frontend-93b16cfac9b64d97.js  frontend-93b16cfac9b64d97_bg.wasm  frontend-a982be7baae2d619_bg.wasm  frontend-dbf0cb9a213c52b2.js  frontend-dbf0cb9a213c52b2_bg.wasm  frontend-e531d88c130d710a.js  frontend-e531d88c130d710a_bg.wasm  index.html
frontend/.stage/: output-927231d042020c0e.css
source/: .env.example  .gitignore  Cargo.toml  Makefile  README.md
source/backend/: Cargo.toml
source/backend/src/: config.rs  main.rs
source/backend/src/db/: document_store.rs  mod.rs  sqlite.rs
source/backend/src/routes/: auth_routes.rs  health.rs  mod.rs  product_routes.rs  service_record_routes.rs  sms_routes.rs  user_routes.rs
source/backend/src/services/: auth_service.rs  event_service.rs  mod.rs  product_service.rs  service_record_service.rs  sms_service.rs  user_service.rs
source/frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
source/frontend/src/: main.rs
source/frontend/src/components/: layout.rs  navbar.rs
source/frontend/src/pages/: home.rs  irsaliye.rs  login.rs  mod.rs  montaj.rs  musteri_kabul.rs  products.rs  servis_kayitlari.rs  settings.rs  sms_kuyruk.rs  users.rs
source/frontend/src/services/: api.rs
source/frontend/style/: input.css  output.css
source/shared/: Cargo.toml
source/shared/src/: error.rs  lib.rs
source/shared/src/dto/: auth_dto.rs  mod.rs  product_dto.rs  service_record_dto.rs  sms_log_dto.rs  user_dto.rs
source/shared/src/models/: product.rs  user.rs
