[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "File", "FileList", "HtmlInputElement", "HtmlElement", "Blob", "Url", "Storage", "Location"] }
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
